--- a/css/my.style.css
+++ b/css/my.style.css
@@ -76,8 +76,9 @@ a {
 
 .main-content {
     font-family: "Calibri";
-    font-size: 2em;
+    font-size: 1.5em;
     color: #0d3349;
+    padding: 15px 15px 15px 15px;
 }
 
 #content p {
