--- a/css/my.style.css
+++ b/css/my.style.css
@@ -11,7 +11,7 @@
 */
 
 body {
-    background-color: #e7e5e5;
+    background-color: #efefef;
     padding: 20px 20px 20px 20px;
     text-align: center;
     width: 900px;
@@ -20,9 +20,9 @@ body {
 }
 
 p {
-    font: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: 'Jura', sans-serif;
     font-size: 16px;
-    color: #0b0b0b;
+    color: #3AAACF;
     line-height: 1.5em;
 }
 
@@ -32,20 +32,25 @@ a {
 
 .logo h1, .logo a {
     text-align: right;
-    color: #3e3e3e;
+    color: #024E68;
+    background-color: #61B4CF;
     text-decoration: none;
-    font: Georgia, "Times New Roman", Times, serif;
-    font-size: 36px;
+    font-family: 'Fredericka the Great', cursive;
+    font-size: 48px;
     font-variant: small-caps;
+    letter-spacing: 5px;
 }
 
 .logo p {
     text-align: right;
-    color: #5f5f5f;
+    color: #06799F;
+
+    font-family: 'Amatic SC', cursive;
+    font-size: 36px;
 }
 
 .nav {
-    background-color: #333;
+    background-color: #FFBB73;
     line-height: 2em;
 }
 
@@ -56,7 +61,7 @@ a {
 }
 
 .nav li a {
-    color: #999999;
+    color: #A65500;
     font-variant: small-caps;
     font-size: 1.3em;
 }
@@ -66,6 +71,7 @@ a {
     height: 400px;
     width: 700px;
     margin: 0 auto;
+    background-color: #024E68;;
 }
 
 #content {
@@ -75,9 +81,10 @@ a {
 }
 
 .main-content {
-    font-family: "Calibri";
+    font-family: 'Jura', sans-serif;
     font-size: 1.5em;
-    color: #0d3349;
+    color: #3AAACF;
+
     padding: 15px 15px 15px 15px;
 }
 
