--- a/css/my.style.css
+++ b/css/my.style.css
@@ -69,9 +69,9 @@ a {
 #main {
     border: 3px solid;
     height: 400px;
-    width: 700px;
+    width: 900px;
     margin: 0 auto;
-    background-color: #024E68;;
+    background-color: #8ad7db;;
 }
 
 #content {
@@ -83,7 +83,7 @@ a {
 .main-content {
     font-family: 'Jura', sans-serif;
     font-size: 1.5em;
-    color: #3AAACF;
+    color: #056088;
 
     padding: 15px 15px 15px 15px;
 }
